# Big_Bordcomputer

./: CMakeLists.txt  Doxyfile  README.md  sdkconfig 2.old
main/: CMakeLists.txt  adc.c  hello_world_main.c  i2c.c  idf_component.yml  includes.h  individual_config.h  logging.c  main.c  pwm_sensor_functions.c  rtc.c
main/LVGL/: Gauge_All_E36.eez-project  Gauge_All_E36.eez-project-ui-state  display_functions.c  variableFunctions.c  variableFunctions.h
main/LVGL/Gauge_All/: Gauge_All.eez-project  Gauge_All.eez-project-ui-state
main/LVGL/Gauge_Clock_Temperature/: Gauge_Clock_Temperature.eez-project
main/LVGL/Gauge_Oil_Pressure_Day/: Gauge_Oil_Pressure_Day.eez-project  Gauge_Oil_Pressure_Day.eez-project-ui-state
main/LVGL/Gauge_Oil_Pressure_Night/: Gauge_Oil_Pressure_Night.eez-project  Gauge_Oil_Pressure_Night.eez-project-ui-state
main/LVGL/Gauge_Oil_Temperature_Day/: Gauge_Oil_Temperature_Day.eez-project  Gauge_Oil_Temperature_Day.eez-project-ui-state
main/LVGL/Gauge_Oil_Temperature_Night/: Gauge_Oil_Temperature_Night.eez-project  Gauge_Oil_Temperature_Night.eez-project-ui-state
main/LVGL/Gauge_Temperature_Clock_Day/: Gauge_Temperature_Clock_Day.eez-project  Gauge_Temperature_Clock_Day.eez-project-ui-state
main/LVGL/Logos/: Logo.c  jro.c
main/calculation/: values.c  values.h
main/logging/: logging.c  logging.h
main/peripherie/: adc.c  adc.h  buzzer.c  buzzer.h  i2cFunctions.c  i2cFunctions.h  ledBacklight.c  ledBacklight.h  pwmSensor.c  pwmSensor.h  pwmSwitch.c  pwmSwitch.h  spiFunctions.c  spiFunctions.h
main/simulation/: testSimulation.c  testSimulation.h
(+515 files in other folders)
